fix(#272): settings dialog scrollbars make more sense
There are still potentially two scrollbars but the window has to be pretty small to have them both show up.

--- a/src/renderer/style/app-settings.css
+++ b/src/renderer/style/app-settings.css
@@ -18,7 +18,7 @@
         padding: 0;
     }
     fieldset {    
-        min-height: 70vh;
+        min-height: 85vh;
     }
     div.field {
         background-color: var(--bg-off);
